# tic-tac-toe

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  gunicorn.conf.py  mypy.ini  pyproject.toml  shell.nix  sqitch.conf
.github/workflows/: ci.yaml
examples/: draw.sh  win.sh
migrations/: sqitch.plan
migrations/deploy/: 0001_add_game_table.sql
migrations/revert/: 0001_add_game_table.sql
migrations/verify/: 0001_add_game_table.sql
src/tic_tac_toe/: __main__.py
src/tic_tac_toe/adapters/repository/: postgres.py
src/tic_tac_toe/domain/: application.py  data.py
src/tic_tac_toe/entrypoints/: asgi.py
tests/: fixtures.py
tests/domain/: test_data.py
tests/entrypoints/: test_asgi.py
