[tool.poetry]
name = "tic-tac-toe"
version = "0.1.0"
description = ""
authors = ["mechpig <7295856+mech-pig@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
gunicorn = "^20.0.4"
pydantic = "^1.10"
uvicorn = { extras = ["standard"], version = "^0.18.3" }
psycopg = { extras = ["binary"], version = "^3.1" }

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-todos = "^0.1.5"
isort = "^5.9.3"
mypy = "^0.982"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-describe = "^2.0.0"
pytest-randomly = "^3.12.0"
requests = "^2.28.1"
pytest-asyncio = "^0.19.0"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
skip_gitignore = true
src_paths = ["src", "test"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = """
    -rf
    -vv
    --strict-config
    --strict-markers
    --doctest-modules
    --maxfail=2
    --cov src
    --cov-report term-missing
"""
xfail_strict = true
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
